--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,16 +6,16 @@
     <title>Registration</title>
 </head>
 <body>
-    <form action="invoice_view_html" method="post">
+    <form action="htmlpage" method="post">
         <input type="button" name="html_page" placeholder="HTML PAGE"/> HTML<br/>       
         <input type="Submit"/>
     </form>
 
-    <form action="invoice_view_pdf" method="post">
+    <form action="pdfpage" method="post">
         <input type="button" name="pdf_page" placeholder="PDF PAGE"/> PDF<br/>       
         <input type="Submit"/>
     </form>
-    <form action="invoice_view_csv" method="post">
+    <form action="csvpage" method="post">
         <input type="button" name="csv_page" placeholder="CSV PAGE"/> CSV<br/>       
         <input type="Submit"/>
     </form>
