--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,30 +1,19 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    {% block title %}
-      <title>Django+Python Template to HTML, PDF and CSV</title>
-    {% endblock %}
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"/>
-    <!-- Add additional CSS in static file -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  <head>    
+      <title>Django + Python Template to HTML, PDF and CSV</title>    
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
-<body>
-    
-    <div class="container-fluid">
+<body>    
+    <div>
         <div class="row">
-          <div class="col-sm-2">
-            {% block sidebar %}
-              <ul class="sidebar-nav">
+          <div>         
+              <ul>
                 <li><a href="{% url 'htmlpage' %}">HTML</a></li>
                 <li><a href="{% url 'pdfpage' %}">PDF</a></li>
                 <li><a href="{% url 'csvpage' %}">CSV</a></li>
-              </ul>
-            {% endblock %}
-          </div>
-          <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+              </ul>           
+          </div>         
         </div>
       </div>
 </body>
