--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>    
       <title>Django + Python Template to HTML, PDF and CSV</title>    
-    <link rel="stylesheet" href="css/styles.css" />
   </head>
-<body>    
+<body>      
     <div>
-        <div class="row">
+        <div>
           <div>         
-              <ul>
+              <ul>              
                 <li><a href="{% url 'htmlpage' %}">HTML</a></li>
                 <li><a href="{% url 'pdfpage' %}">PDF</a></li>
                 <li><a href="{% url 'csvpage' %}">CSV</a></li>
