--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,15 +5,13 @@
   </head>
 <body>      
     <div>
-        <div>
-          <div>         
+        <nav>               
               <ul>              
                 <li><a href="{% url 'htmlpage' %}">HTML</a></li>
                 <li><a href="{% url 'pdfpage' %}">PDF</a></li>
                 <li><a href="{% url 'csvpage' %}">CSV</a></li>
-              </ul>           
-          </div>         
-        </div>
+              </ul> 
+        </nav>
       </div>
 </body>
 </html>
