Mais uma melhoria
Melhoria no render em HTML

--- a/src/templates/pdfs/invoice_html.html
+++ b/src/templates/pdfs/invoice_html.html
@@ -15,6 +15,7 @@
             Date:  {{ date }}
             <hr class='hrItem' />
         </div>
+        <li><a href="{% url 'index' %}">Home</a></li>
     </div>
     </body>
 </html>
