--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>    
-      <title>Django + Python Template to HTML, PDF and CSV</title>         
+      <title>Django + Python Template to HTML, PDF and CSV</title>  
+      <style type="text/css">
+        body {
+            font-weight: 200;
+            font-size: 14px;
+        }
+        .header {
+            font-size: 20px;
+            font-weight: 100;
+            text-align: center;
+            color: #007cae;
+        }
+        .title {
+            font-size: 22px;
+            font-weight: 100;
+           /* text-align: right;*/
+           padding: 10px 20px 0px 20px;  
+        }
+        .title span {
+            color: #007cae;
+        }
+        .details {
+            padding: 10px 20px 0px 20px;
+            text-align: left !important;
+            /*margin-left: 40%;*/
+        }
+        .hrItem {
+            border: none;
+            height: 1px;
+            /* Set the hr color */
+            color: #333; /* old IE */
+            background-color: #fff; /* Modern Browsers */
+        }
+    </style>       
   </head>
 <body>      
     <div>
